# gardn-rift

./: .gitignore  INSTALLATION.md  gardn-bundle.js
Bots/: README.md  agent.py  bot.py  export_onnx.py  inspect_obs.py  memory.py  model.onnx  model.onnx.data  model.pt  model.pt.W0  model.pt.W1  model.pt.W2  model.pt.W3  model.pt.W4  model.pt.W5  model.pt.W6  model.pt.W7  model.pt.W8  model.pt.W9  model.pt.best  model.pt.best.damage  model.pt.best.drops  model.pt.best.kills  model.pt.best.petal_rarity  model_1.pt  model_2.pt  protocol.py  requirements.txt  run.py  wall_map.py
Bots/state/: 67.json  a.json  aa.json  anther.json  b0.json  b1.json  b2.json  b3.json  bloom.json  bloomy.json  blossom-v2.json  blossom.json  blossom_v2.json  bot-100.json  bot-1000.json  bot-1001.json  bot-1002.json  bot-1005.json  bot-101.json  bot-102.json  bot-103.json  bot-104.json  bot-105.json  bot-106.json  bot-107.json  bot-108.json  bot-109.json  bot-110.json  bot-111.json  bot-112.json  bot-113.json  bot-114.json  bot-115.json  bot-116.json  bot-117.json  bot-118.json  bot-119.json  bot-120.json  bot-121.json  bot-122.json  (+1266 more)
Bundle/: BotDriver.cc  Bridge.cc  CMakeLists.txt  Prologue.hh  README.md  index.html  stage_model.cmake  wrap_sources.py
Client/: CMakeLists.txt  Game.cc  Game.hh  Network.cc  Particle.cc  Rendering.cc  Setup.cc  Simulation.cc  Socket.cc  Storage.cc
Client/Assets/: Flower.cc  Mob.cc  Petal.cc
Client/Render/: RenderMob.cc  TiledMapRender.cc  TiledMapRender.hh
Client/Ui/InGame/: GameInfo.hh  Map.cc  OverlevelTimer.cc  RoundEndBanner.cc
Client/Ui/TitleScreen/: MobGallery.cc  TitleScreen.hh
Server/: CMakeLists.txt  Client.cc  Client.hh  Game.cc  Game.hh  Native.cc  Simulation.cc  SpatialHash.hh  SpatialHashCanonical.cc  SpatialHashUniform.cc  Spawn.cc  Spawn.hh  TiledMap.cc  TiledMap.hh  Wasm.cc
Server/EntityFunctions/: Damage.cc  Death.cc  Detection.cc
Server/Process/: Ai.cc  Camera.cc  Collision.cc  Culling.cc  Flower.cc  Health.cc  Motion.cc  Petal.cc
Shared/: Arena.hh  Binary.hh  Config.cc  Config.hh  EntityDef.cc  EntityDef.hh  Map.cc  MapDimensions.cc  MapDimensions.hh.in  MapDims.cmake  Simulation.hh  StaticData.cc  StaticData.hh  StaticDefinitions.hh
